    with an url claimed by a special remote other than the web.
  * Fix installation on Android.
  * Allow enableremote of an existing webdav special remote that has
    read-only access.
  * git-remote-annex: Use enableremote rather than initremote.
  * Windows: Fix permission denied error when dropping files that
    have the readonly attribute set.

 -- Joey Hess <id@joeyh.name>  Fri, 03 Jan 2025 14:30:38 -0400

git-annex (10.20250102) upstream; urgency=medium

  * Added config `url.<base>.annexInsteadOf` corresponding to git's
    `url.<base>.pushInsteadOf`, to configure the urls to use for accessing
    the git-annex repositories on a server without needing to configure
    remote.name.annexUrl in each repository.
  * Work around git hash-object --stdin-paths's odd stripping of carriage
    return from the end of the line (some windows infection), avoiding
    crashing when the repo contains a filename ending in a carriage return.
  * Document that settting preferred content to "" is the same as the
    default unset behavior.
  * sync: Avoid misleading warning about future preferred content
    transition when preferred content is set to "".
  * Honor annex.addunlocked configuration when importing a tree from a
    special remote.
  * Removed the i386ancient standalone tarball build for linux, which
    was increasingly unable to support new git-annex features.
  * Removed support for building with ghc older than 9.0.2,
    and with older versions of haskell libraries than are in current Debian
    stable.
  * stack.yaml: Update to lts-23.2.

 -- Joey Hess <id@joeyh.name>  Thu, 02 Jan 2025 12:31:58 -0400

git-annex (10.20241202) upstream; urgency=medium

  * add: Consistently treat files in a dotdir as dotfiles, even
    when ran inside that dotdir.
  * add: When adding a dotfile as a non-large file, mention that it's a
    dotfile.
  * p2phttp: Added --directory option which serves multiple git-annex
    repositories located inside a directory.