@@ -1155,6 +1155,24 @@ repository, using [[git-annex-config]]. See its man page for a list.)
   This command is run and its output is used as the commit message to the
   git-annex branch.
 
+* `annex.post-update-command`
+
+  This command is run after git-annex updates the git-annex branch.
+
+  Alternatively, a hook script can be installed in 
+  `.git/hooks/post-update-annex`
+
+  When publishing a git-annex repository by http, this can be used to run
+  `git update-server-info`
+
+* `annex.pre-commit-command`
+
+  This command is run whenever a commit is made to the HEAD branch of
+  the git repository, either by git commit, or by git-annex.
+
+  Alternatively, a hook script can be installed in
+  `.git/hooks/pre-commit-annex`
+
 * `annex.alwayscompact`
 
   By default, git-annex compacts data it records in the git-annex branch.
@@ -2321,14 +2339,6 @@ used by git-annex.
 
 `~/.config/git-annex/autostart` is a list of git repositories
 to start the git-annex assistant in.
-
-`.git/hooks/pre-commit-annex` in your git repository will be run whenever
-a commit is made to the HEAD branch, either by git commit, git-annex
-sync, or the git-annex assistant.
-
-`.git/hooks/post-update-annex` in your git repository will be run
-whenever the git-annex branch is updated. You can make this hook run
-`git update-server-info` when publishing a git-annex repository by http.
 
 # SEE ALSO
 
